@@ -1,7 +1,7 @@
 
 ACLOCAL_AMFLAGS = -I m4 -I m4/common -I m4/evil
 
-DISTCHECK_CONFIGURE_FLAGS = --host=$(host_triplet)
+DISTCHECK_CONFIGURE_FLAGS = --host=$(host_triplet) --disable-static
 
 MAINTAINERCLEANFILES = \
 aclocal.m4 \
